<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DD1199DD"
    tools:context="alphalfa.android.letsdrop.MainActivity" >
    
    <TextView
	    android:id="@+id/rain_text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:padding="10dp"
	    android:text="@string/rain_instructions"
	    android:textSize="15sp" />
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rain_text"
        android:layout_weight="0.57"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        
        <Button
            android:id="@+id/rain_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="10dp"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:background="#EFE863"
            android:text="@string/select_city" />
        
        <Button
            android:id="@+id/rain_mylocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="10dp"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:background="#D887CD"
            android:text="@string/my_location" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/weather_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="50sp" />

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="25sp" />

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp" />
	            
        <TextView
            android:id="@+id/updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp" />

        <TextView
            android:id="@+id/raining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Is it raining?"
            android:textSize="25sp" />
	        
         <TextView
            android:id="@+id/raindrops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/ic_launcher"
            android:text="+ 0"
            android:textSize="25dp" />
	         
    </LinearLayout>

    <ImageButton
        android:id="@+id/rain_OK_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:background="@drawable/ic_check_box_75dp" />

    <Button
        android:id="@+id/rain_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/rain_OK_button"
        android:visibility="gone"
        android:text="Random" />

</RelativeLayout>